--- a/index.html
+++ b/index.html
@@ -14,5 +14,38 @@
     <title>jaseon&#39;s Website</title>
     <!-- &#39; -->
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header>
+      <div>
+        <img src="./images/hantengu.ico" alt="logo" />
+        <h1><a href="#">jaseon</a></h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#home">홈으로</a></li>
+          <li><a href="#about">jaseon</a></li>
+          <li><a href="#skills">기술</a></li>
+          <li><a href="#work">포트폴리오</a></li>
+          <li><a href="#license">자격증</a></li>
+          <li><a href="#contact">연락처</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Main -->
+    <main>
+      <!-- home -->
+      <section id="home"></section>
+      <!-- about -->
+      <section id="about"></section>
+      <!-- skills -->
+      <section id="skills"></section>
+      <!-- work -->
+      <section id="work"></section>
+      <!-- license -->
+      <section id="license"></section>
+      <!-- contact -->
+      <section id="contact"></section>
+    </main>
+  </body>
 </html>
