--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <!-- header -->
     <header>
       <div>
-        <img src="./images/hantengu.ico" alt="logo" />
-        <h1><a href="#">jaseon</a></h1>
+        <img src="./images/ralph.ico" alt="logo" />
+        <h1><a href="#">Hwon</a></h1>
       </div>
       <nav>
         <ul>
           <li><a href="#home">홈으로</a></li>
-          <li><a href="#about">jaseon</a></li>
+          <li><a href="#about">Hwon</a></li>
           <li><a href="#skills">기술</a></li>
           <li><a href="#work">포트폴리오</a></li>
           <li><a href="#license">자격증</a></li>
@@ -32,7 +32,7 @@
         </ul>
       </nav>
     </header>
-    <!-- Main -->
+    <!-- main -->
     <main>
       <!-- home -->
       <section id="home"></section>
