--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="anothor" content="jaseon" />
+    <meta name="author" content="Ryuzy" />
     <meta name="description" content="우주에서 가장 뛰어난 AI 개발자" />
     <link
       rel="shortcut icon"
       href="./images/hantengu.ico"
-      type="ges/x-icon"/>
-    
-   
+      type="images/x-icon"
+    />
     <title>jaseon&#39;s Website</title>
-     <link rel="stylesheet" href="./css/style.css" />
-
-    <!-- &#39; -->
+    <link rel="stylesheet" href="./css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/133260cff9.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header -->
@@ -38,21 +39,64 @@
     <main>
       <!-- home -->
       <section id="home">
+        <img
+          class="home__avatar"
+          src="./images/hantengu.jpg"
+          alt="프로필 사진"
+        />
         <h2 class="home__title">
-         <img class="home__avatar" src="./images/hantengu.jpg" alt="프로필 사진" />
-        <h2 class="home__title">
-          안녕하세요!!<br /><strong class="home__title--strong">Jason</strong>
+          안녕하세요!!<br /><strong class="home__title--strong">jaseon</strong>
           입니다.
         </h2>
         <p class="home__description">우주에서 가장 뛰어난 AI 개발자입니다.</p>
         <a class="home__contact" href="#contact">연락처</a>
       </section>
-
-
-
-      </section>
       <!-- about -->
-      <section id="about"></section>
+      <section id="about" class="section max-container">
+        <h2 class="title">jaseon</h2>
+        <p class="description">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit
+          deserunt doloribus consequuntur eligendi? Eius, consequatur
+          reprehenderit provident eveniet laboriosam a, labore nemo, nam iste ea
+          quasi beatae dignissimos qui perspiciatis. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Sunt amet nulla, necessitatibus
+          praesentium, perspiciatis, quisquam ex earum harum ipsam non accusamus
+          ut tempore. Ipsam deserunt illum, pariatur dignissimos dolorem atque?
+        </p>
+        <ul class="majors">
+          <li class="major">
+            <i class="fa-brands fa-html5 major__icon"></i>
+            <p class="major__title">front-end</p>
+            <p>HTML, CSS, JavaScript, React</p>
+          </li>
+          <li class="major">
+            <i class="fa-solid fa-mobile major__icon"></i>
+            <p class="major__title">Mobile</p>
+            <p>React-Native, Android, IOS, Kotlin</p>
+          </li>
+          <li class="major">
+            <i class="fa-solid fa-server major__icon"></i>
+            <p class="major__title">Back-end</p>
+            <p>Node.js, FastAPI</p>
+          </li>
+        </ul>
+        <ul class="jobs">
+          <li class="job">
+            <img src="./images/regoku.webp" alt="렌고쿠" />
+            <div>
+              <p class="job__name">귀살대</p>
+              <p class="job__period">염주</p>
+            </div>
+          </li>
+          <li class="job">
+            <img src="./images/akaja.webp" alt="아카자" />
+            <div>
+              <p class="job__name">십이귀월</p>
+              <p class="job__period">상현 3</p>
+            </div>
+          </li>
+        </ul>
+      </section>
       <!-- skills -->
       <section id="skills"></section>
       <!-- work -->
