--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav class="header__nav">
         <ul class="header__menu">
           <li><a href="#home" class="header__menu__item active">홈으로</a></li>
-          <li><a href="#about" class="header__menu__item">Ryuzy</a></li>
+          <li><a href="#about" class="header__menu__item">jaseon</a></li>
           <li><a href="#skills" class="header__menu__item">기술</a></li>
           <li><a href="#work" class="header__menu__item">포트폴리오</a></li>
           <li><a href="#license" class="header__menu__item">자격증</a></li>
@@ -308,10 +308,81 @@
           </ul>
         </div>
       </section>
-      <!-- license -->
-      <section id="license"></section>
-      <!-- contact -->
-      <section id="contact"></section>
+      <section id="license" class="section max-contaienr">
+        <h2 class="title">자격증</h2>
+        <p class="description">국가 기술 자격증</p>
+        <ul class="licenses">
+          <li class="license">
+            <img
+              class="license__img"
+              src="./images/daki.webp"
+              alt="정보처리기사 자격증"
+            />
+            <div class="license__bubble">
+              <p><a class="license__bubble__name" href="#">산업인력공단</a></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                consequuntur impedit sit nam reiciendis! Voluptatum,
+                repellendus. Cumque officia corrupti nemo quo cupiditate
+                aperiam. Officiis reprehenderit fugiat nisi perferendis
+                molestias laborum?
+              </p>
+            </div>
+          </li>
+          <li class="license">
+            <img
+              class="license__img"
+              src="./images/kutaro.webp"
+              alt="빅데이터분석기사 자격증"
+            />
+            <div class="license__bubble">
+              <p>
+                <a class="license__bubble__name" href="#">데이터산업진흥원</a>
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                consequuntur impedit sit nam reiciendis! Voluptatum,
+                repellendus. Cumque officia corrupti nemo quo cupiditate
+                aperiam. Officiis reprehenderit fugiat nisi perferendis
+                molestias laborum?
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <!-- aside -->
+      <aside>
+        <a class="arrow-up" href="#home" title="위로"
+          ><i class="fa-solid fa-arrow-up"></i
+        ></a>
+      </aside>
     </main>
+    <!-- Contact -->
+
+    <footer id="contact" class="section">
+      <div class="max-contaienr">
+        <h2 class="title">연락주세요!</h2>
+        <ul class="contact__links">
+          <li>
+            <a
+              class="contact__link"
+              href="https://github.com/kisswlrn-dotcom"
+              target="_blank"
+              title="깃허브"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://kisswlrn-dotcom.github.io/MySite/"
+              target="_blank"
+              title="깃허브"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+        </ul>
+        <p>&copy; LeF - All rights reserved</p>
+      </div>
+    </footer>
   </body>
 </html>
